k8s/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiderfoot
  namespace: devsec
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: spiderfoot
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            # you can try enabling this later; some images need tmp writes:
            # readOnlyRootFilesystem: true
