k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spiderfoot
  namespace: devsec
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: spiderfoot
